data/derived/comb/progs/unify/prog1513.ml.out
Characters 25-41:
  digitsOfInt n/10 @ [n mod 10];;
  ^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
